* Resolve {bz: 1869}: Restore scrollbar during Preview.
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/branches/iteration-2008-12-12@11873 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -2170,6 +2170,10 @@ body div#globalNav div input.searchText {
     width: 90%;
 }
 
+#st-edit-mode-container.preview {
+    position: static;
+    width: 100%;
+}
 #st-edit-mode-container.expanded {
     position: absolute;
     top:0;
